# CTProjector

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  TODO.md  setup.cfg  sqs_algorithms_cupy.py
conda_env/: create_runtime_env.sh
cuda/: Projector.cu  Projector.h  Siddon.cu  Siddon.h  SiddonCone.cu  SiddonCone.h  distanceDriven.h  distanceDriven3D.cu  makefile  projector.cu  projector.h  siddon.h  siddonCone.cu  siddonCone.h
doc/: sqs_equations.docx
docker/: .env  compile.sh  docker-compose.yml  docker_build.sh  docker_run.sh  docker_run_compile.sh  dockerfile  entrypoint.sh  requirements.txt
example/: ex_dd_fbp_forbild.ipynb  ex_dd_fp_bp.ipynb  ex_dd_fp_bp_cupy.ipynb  ex_dd_fp_bp_fan_cupy.ipynb  ex_dd_fp_bp_fan_numpy.ipynb  ex_dd_fp_bp_parallel_cupy.ipynb  ex_fbp_mayo.ipynb  ex_fp_bp.ipynb  ex_fp_bp_cone_tf.ipynb  ex_fp_bp_cupy.ipynb  ex_fp_bp_dd_tf.ipynb  ex_fp_bp_fan.ipynb  ex_helical_rebin_fbp.ipynb  ex_nlm.ipynb  ex_nlm_cupy.ipynb  ex_parallel_conebeam.ipynb  ex_recon_gaussian_cupy.ipynb  ex_recon_tv_cupy.ipynb  ex_recon_tv_numpy.ipynb  ex_tv_recon_cupy.ipynb  ex_tv_recon_numpy.ipynb  projector.cfg  projector_fan.cfg  readme.md
prior/: recon_prior.py  recon_prior_cupy.py
prior/cuda/: NonLocalMean.cu  TotalVariation.cu  makefile
projector/: ct_projector.py  ct_projector_cupy.py  ct_projector_tensorflow.py
projector/cuda/: cudaMath.cu  cudaMath.h  distanceDriven.cu  distanceDriven.h  fbp.cu  fbp.h  (+12 more)
python/: ct_projector.py  ct_projector_cupy.py  ex_dd_fp_bp.ipynb  ex_dd_fp_bp_cupy.ipynb  ex_fp_bp.ipynb  ex_fp_bp_cupy.ipynb  projector.cfg  tomo.cfg
(+74 files in other folders)
